@@ -360,7 +360,7 @@ const char *dname_to_string(const dname_type *dname,
  */
 const char *dname_to_string_r(const dname_type *dname,
 			      const dname_type *origin,
-			      char *buf);
+			      char *buf, size_t bufsize);
 
 /*
  * Create a dname containing the single label specified by STR
