@@ -6,6 +6,7 @@ NSD RELEASE NOTES
 BUG FIXES:
 	- Bugfix #487: lookup3.c determine endianness for BSD systems.
 	- Bugfix #494: Exit with return code 1 if socket code fails.
+	- Bugfix #495: Wrong bufsize in dname_to_string for root.
 	- Fix outgoing-interface: Don't fail if family is IPv6 but
 	  only IPv4 outgoing-interface is set, or vice versa.
 
